# lumos

./: .dockerignore  .env.example  .gitignore  Dockerfile  Gemini.md  README.md  docker-compose.yml  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/chat/: page.tsx
app/map/: page.tsx
app/stats/: page.tsx
components/landing/: ascii-shader.tsx  bento-grid.tsx  code-showcase.tsx  footer.tsx  integration-mesh.tsx  key-features.tsx  metrics-dashboard.tsx  problem-solution.tsx  team-section.tsx
components/map/: energy-particles.tsx  microgrid-map.tsx  node-popup.tsx  tx-feed-sidebar.tsx
components/solei/: action-buttons.tsx  activity-sidebar.tsx  chat-bubble.tsx  chat-container.tsx  forecast-card.tsx  input-bar.tsx  proposal-card.tsx  simulation-modal.tsx  weekly-insight.tsx
components/stats/: leaderboard.tsx  price-history.tsx  production-chart.tsx  roi-calculator.tsx  trade-history.tsx
components/ui/: animated-background.tsx  bottom-nav.tsx  client-providers.tsx  (+22 more)
contracts/: Anchor.toml  Cargo.toml  Dockerfile  deploy.sh
contracts/programs/nexus-vault/: Cargo.toml
contracts/programs/nexus-vault/src/: lib.rs
hooks/: use-achievements.ts  use-sol-price.ts  use-voice-input.ts
intelligence/: Dockerfile  forecaster.py  main.py  matcher.py  pyproject.toml  requirements.txt
lib/: export-csv.ts  forecast-utils.ts  i18n.tsx  intelligence.ts  iot-simulator.ts  mock-data.ts  pyth-price.ts  solana-server.ts  solana.ts  solei-ai.ts  types.ts
prisma/: schema.prisma
public/: manifest.json  sw.js
stores/: index.ts  theme.ts
(+6 files in other folders)
