[package]
name = "nexus-vault"
version = "0.1.0"
description = "NexusVault — Green-Ledger P2P Energy Escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexus_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
